// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instruction function should generate active route 1`] = `
Object {
  "await": false,
  "awaitPlatformServer": true,
  "param": "id",
  "type": "getActive",
}
`;

exports[`instruction function should generate collection route 1`] = `
Object {
  "await": false,
  "awaitPlatformServer": true,
  "params": Object {},
  "type": "getMany",
}
`;

exports[`instruction function should generate collection route with parameters 1`] = `
Object {
  "await": false,
  "awaitPlatformServer": true,
  "params": Object {
    "filter[type][$eq]": "comedy",
    "sort": "startAt",
  },
  "type": "getMany",
}
`;
